--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Título principal -->
+    <title>La Leyenda de Roger & Luna | Boda en el Bosque Encantado</title>
+
+    <!-- SEO básico -->
+    <meta
+      name="description"
+      content="En lo profundo del bosque encantado de Cundinamarca, Roger y Luna celebran su unión eterna. Acompáñanos en esta historia de amor digna de una leyenda."
+    />
+    <meta
+      name="keywords"
+      content="Boda Roger y Luna, Bosque Encantado, Boda Medieval, Hacienda La Victoria, Subachoque"
+    />
+    <meta name="author" content="Roger & Luna" />
+    <meta name="theme-color" content="#2f3e2c" />
+
+    <!-- Open Graph (para WhatsApp, Facebook, etc.) -->
+    <meta property="og:title" content="La Leyenda de Roger & Luna" />
+    <meta
+      property="og:description"
+      content="Una boda mágica en el corazón del bosque encantado. Sé parte de nuestra historia."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://laleyendaderogeryluna.com" />
+    <meta
+      property="og:image"
+      content="https://laleyendaderogeryluna.com/og-image.jpg"
+    />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="La Leyenda de Roger & Luna" />
+    <meta
+      name="twitter:description"
+      content="Una unión eterna en el bosque encantado."
+    />
+    <meta
+      name="twitter:image"
+      content="https://laleyendaderogeryluna.com/og-image.jpg"
+    />
+
+    <!-- Favicon (opcional, puedes cambiarlo luego) -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- Fuente opcional medieval (puedes quitar si ya la cargas en CSS) -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Uncial+Antiqua&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
