--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta
       name="keywords"
-      content="Boda Roger y Luna, Bosque Encantado, Boda Medieval, Hacienda La Victoria, Subachoque"
+      content="Boda Roger y Luna, Bosque Encantado, Boda Medieval, Casa Aragón, Subachoque"
     />
     <meta name="author" content="Roger & Luna" />
     <meta name="theme-color" content="#2f3e2c" />
